--- a/index.html
+++ b/index.html
@@ -1,55 +1,13 @@
 <!DOCTYPE html>
-<html lang="es">
-<head>
-  <meta charset="UTF-8" />
-  <title>Congreso HPMM 2025</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      background-color: #fdfdfd;
-      text-align: center;
-      padding: 40px;
-    }
-    img {
-      max-width: 300px;
-      margin-bottom: 40px;
-    }
-    h1 {
-      color: #8e2f89;
-      margin-bottom: 10px;
-    }
-    .boton {
-      background-color: #8e2f89;
-      color: white;
-      border: none;
-      padding: 15px 30px;
-      border-radius: 10px;
-      margin: 10px;
-      font-size: 18px;
-      cursor: pointer;
-      text-decoration: none;
-      display: inline-block;
-    }
-    .footer {
-      margin-top: 40px;
-      font-size: 14px;
-      color: #666;
-    }
-  </style>
-</head>
-<body>
-  <img src="congreso.jpg" alt="Logo Congreso" />
-  <h1>Primer Congreso</h1>
-  <p>Hospital Psiquiátrico Mario Mendoza</p>
-
-  <div>
-    <a class="boton" href="reunion.html">Modo Expositor / Público</a>
-    <a class="boton" href="moderador.html">Modo Moderador</a>
-  </div>
-
-  <div class="footer">
-    Dra. María Guadalupe Romero Andrade (in memoriam)<br />
-    25 al 27 de AGOSTO, 2025
-  </div>
-</body>
+<html>
+  <head>
+    <title>Inicio - Congreso 2025</title>
+    <meta charset="UTF-8" />
+    <script src="https://cdn.tailwindcss.com"></script>
+  </head>
+  <body class="flex flex-col items-center justify-center min-h-screen bg-white">
+    <h1 class="text-3xl font-bold text-purple-700">Bienvenido al Congreso 2025</h1>
+    <a href="moderador.html" class="mt-4 text-blue-600 underline">Ir al panel del moderador</a>
+    <a href="reunion.html" class="mt-2 text-blue-600 underline">Ir a la sala del expositor</a>
+  </body>
 </html>
