--- a/moderador.html
+++ b/moderador.html
@@ -2,121 +2,38 @@
 <html lang="es">
 <head>
   <meta charset="UTF-8" />
-  <title>Control Moderador</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      padding: 30px;
-      background-color: #f2f2f2;
-    }
-    input, button, select {
-      display: block;
-      margin: 10px 0;
-      padding: 10px;
-      font-size: 16px;
-      border-radius: 8px;
-      border: 1px solid #ccc;
-      width: 100%;
-      max-width: 400px;
-    }
-    button {
-      background-color: #8e2f89;
-      color: white;
-      border: none;
-      cursor: pointer;
-    }
-    #controls {
-      margin-top: 30px;
-    }
-  </style>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Ingreso del Moderador</title>
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script type="module" src="moderador.js"></script>
 </head>
-<body>
-  <h2>Ingreso del Moderador</h2>
-  <input type="email" id="email" placeholder="Correo del moderador" />
-  <input type="password" id="password" placeholder="Contraseña" />
-  <button id="loginBtn">Iniciar sesión</button>
+<body class="bg-gray-100 min-h-screen flex items-center justify-center">
+  <div class="bg-white shadow-xl rounded-xl p-8 w-full max-w-2xl space-y-4">
+    <h1 class="text-2xl font-bold text-purple-700 text-center">Configuración del Turno</h1>
 
-  <div id="controls" style="display:none;">
-    <h3>Expositores</h3>
-    <select id="speakerSelect"></select>
-    <input type="number" id="minutesInput" placeholder="Minutos" min="1" />
-    <button id="startBtn">Iniciar turno</button>
+    <div class="grid grid-cols-1 gap-4">
+      <input type="text" id="speakerName" placeholder="Nombre del Expositor" class="input"/>
+      <input type="text" id="speakerRole" placeholder="Puesto o Cargo" class="input"/>
+      <input type="text" id="topic" placeholder="Tema" class="input"/>
+      <input type="text" id="subtopic" placeholder="Subtema (opcional)" class="input"/>
+      <input type="number" id="assignedMinutes" placeholder="Minutos asignados" class="input" min="1" />
+      <input type="url" id="zoomUrl" placeholder="URL de la reunión de Zoom" class="input"/>
+    </div>
 
-    <h3 style="margin-top:30px;">Link de reunión Zoom</h3>
-    <input type="text" id="zoomInput" placeholder="https://us06web.zoom.us/j/..." />
-    <button id="updateZoomBtn">Actualizar link Zoom</button>
+    <button id="startBtn" class="w-full bg-purple-700 hover:bg-purple-800 text-white py-2 px-4 rounded">
+      Iniciar Turno
+    </button>
+
+    <p id="status" class="text-center text-sm text-gray-500"></p>
   </div>
 
-  <script type="module">
-    import { initializeApp } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-app.js';
-    import { getAuth, signInWithEmailAndPassword, onAuthStateChanged } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-auth.js';
-    import { getDatabase, ref, set } from 'https://www.gstatic.com/firebasejs/10.9.0/firebase-database.js';
-    import { firebaseConfig } from './firebase-config.js';
-
-    const app = initializeApp(firebaseConfig);
-    const auth = getAuth(app);
-    const db = getDatabase(app);
-
-    const loginBtn = document.getElementById('loginBtn');
-    const emailInput = document.getElementById('email');
-    const passwordInput = document.getElementById('password');
-    const controls = document.getElementById('controls');
-    const speakerSelect = document.getElementById('speakerSelect');
-    const minutesInput = document.getElementById('minutesInput');
-    const startBtn = document.getElementById('startBtn');
-    const zoomInput = document.getElementById('zoomInput');
-    const updateZoomBtn = document.getElementById('updateZoomBtn');
-
-    const expositores = [
-      "Dra. Martínez",
-      "Dr. Gómez",
-      "Lic. Pérez"
-    ];
-
-    loginBtn.onclick = () => {
-      const email = emailInput.value;
-      const password = passwordInput.value;
-      signInWithEmailAndPassword(auth, email, password)
-        .then(() => console.log("Autenticado"))
-        .catch(err => alert("Error: " + err.message));
-    };
-
-    onAuthStateChanged(auth, user => {
-      if (user) {
-        controls.style.display = 'block';
-        loginBtn.style.display = 'none';
-        emailInput.style.display = 'none';
-        passwordInput.style.display = 'none';
-
-        // llenar select de expositores
-        speakerSelect.innerHTML = "";
-        expositores.forEach(nombre => {
-          const opt = document.createElement('option');
-          opt.value = nombre;
-          opt.textContent = nombre;
-          speakerSelect.appendChild(opt);
-        });
-
-        startBtn.onclick = () => {
-          const nombre = speakerSelect.value;
-          const minutos = parseInt(minutesInput.value);
-          if (!nombre || !minutos) return alert("Completa ambos campos");
-
-          const startTime = new Date().toISOString();
-          set(ref(db, 'current_speaker_turn'), {
-            speakerName: nombre,
-            assignedMinutes: minutos,
-            startTime: startTime
-          });
-        };
-
-        updateZoomBtn.onclick = () => {
-          const url = zoomInput.value;
-          if (!url.startsWith("http")) return alert("URL inválida");
-          set(ref(db, 'zoom_meeting_url'), url);
-        };
-      }
-    });
-  </script>
+  <style>
+    .input {
+      padding: 0.5rem;
+      border: 1px solid #ccc;
+      border-radius: 0.375rem;
+      width: 100%;
+    }
+  </style>
 </body>
 </html>
