--- a/reunion.html
+++ b/reunion.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="es">
+<html lang="es" class="h-full">
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -12,40 +12,47 @@
     <script src="https://source.zoom.us/2.18.5/lib/vendor/lodash.min.js"></script>
     <script src="https://source.zoom.us/zoom-meeting-2.18.5.min.js"></script>
     <script type="module" src="reunion.js"></script>
+    <style>
+      html, body {
+        height: 100%;
+        margin: 0;
+        overflow: hidden;
+      }
+    </style>
   </head>
-  <body class="bg-gray-100 min-h-screen flex flex-col items-center justify-start">
+  <body class="h-full bg-gray-100 flex flex-col items-center justify-start">
     <header class="w-full bg-purple-700 text-white py-4 text-center">
       <h2 class="text-2xl font-bold" id="presenter-name">Nombre del Expositor</h2>
       <p id="presenter-role">Profesión o Cargo</p>
     </header>
 
-    <main class="w-full max-w-6xl px-4 mt-6">
+    <main class="flex-1 w-full max-w-6xl px-4 flex flex-col items-center justify-center">
       <div class="flex justify-center">
-        <img src="congreso.jpg" alt="Logo Congreso" class="w-[150px] h-[150px] -mb-12 z-10 relative" />
+        <img src="congreso.jpg" alt="Logo Congreso" class="w-[120px] h-[120px] mb-4" />
       </div>
 
-      <div id="zmmtg-root" class="my-6 w-full h-[70vh] z-0"></div>
+      <div id="zmmtg-root" class="w-full h-full flex-grow mb-4"></div>
 
-      <div class="my-6 text-center">
+      <div class="text-center w-full px-2">
         <input
           type="text"
           id="zoom-signature"
           placeholder="Pega aquí tu firma de Zoom"
-          class="border border-gray-300 px-4 py-2 w-full max-w-xl rounded text-black"
+          class="border border-gray-300 px-4 py-2 w-full max-w-md rounded text-black"
         />
         <button
           id="join-meeting"
-          class="mt-4 bg-purple-700 hover:bg-purple-800 text-white px-6 py-2 rounded"
+          class="mt-2 bg-purple-700 hover:bg-purple-800 text-white px-6 py-2 rounded"
         >
           Iniciar reunión
         </button>
       </div>
     </main>
 
-    <footer class="bg-purple-100 text-purple-900 w-full py-3 text-center">
+    <footer class="bg-purple-100 text-purple-900 w-full py-2 text-center">
       <div id="speaker-topic">Tema: ...</div>
       <div id="speaker-subtopic">Subtema: ...</div>
-      <div class="text-2xl font-bold mt-2" id="timer-display">--:--</div>
+      <div class="text-xl font-bold mt-1" id="timer-display">--:--</div>
     </footer>
   </body>
 </html>
